--- a/style/mp.css
+++ b/style/mp.css
@@ -1,69 +1,74 @@
 *{
     margin: 0;
     padding: 0;
+}
+   
+body{
+    background: #ffffff;
+}
+   
+.landingbox{
+    padding: 30px;
+    width: 400px;
+    height: 600px;
+    background: #63e09c;
+    top: 50%;
+    left: 50%;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    box-sizing: border-box;
+    text-align: justify;
+    color: #bdbddb;;
+}
+   
+.h1{
+    font-size: 130px;
    }
    
-   body{
-       background: #0c5763;
+.h2{
+    font-size: 90px;
+   }
+ 
+.btn{
+    vertical-align: center;
+    text-align: center;
+    transform: translate(21%, -10%);
+}
+
+.btn a{
+    width: 150px ;
+    display: block;
+    margin: 10px;
+    padding: 12px;
+    color: black;
+    border: .5px solid black;
+    position: relative;
+    text-decoration: none;
+}
+
+.btn a span{
+    width: 0%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: #fff;
+    z-index: -1;
+    transition: 0.5s;
    }
    
-   .banner-text{
-       text-align: center;
-       color: #bdbddb;
-       padding-top: 180px;
+.btn a:hover span{
+    width: 100%;
    }
    
-   .banner-text h1{
-       font-size: 130px;
+.btn a:hover{
+    color: #8080ff;
    }
    
-   .banner-text h1{
-       font-size: 90px;
-   }
-   
-   .banner-btn{
-       margin: 70px auto;
-   }
-   
-   .banner-btn a{
-       width: 150px ;
-       text-decoration: none;
-       display: inline-block;
-       margin: 0 10px;
-       padding: 12px 0;
-       color: black;
-       border: .5px solid black;
-       position: relative;
-       z-index: 1;
-       transition: color 0.5s;
-   }
-   
-   .banner-btn a span{
-       width: 0%;
-       height: 100%;
-       position: absolute;
-       top: 0;
-       left: 0;
-       background: #fff;
-       z-index: -1;
-       transition: 0.5s;
-   }
-   
-   .banner-btn a:hover span{
-       width: 100%;
-   }
-   
-   .banner-btn a:hover{
-       color: #8080ff;
-   }
-   
-   @media screen and (max-width: 770px){
-       .banner-text h1{
-       font-size: 44px;
-       }
-       .banner-btn a{
-           display: block;
-           margin: 20px auto;
-       }
-   }
+ @media screen and (max-width: 770px){
+    .banner-btn a{
+        display: block;
+        margin: 20px auto;
+    }
+}
    
