--- a/style/mp.css
+++ b/style/mp.css
@@ -1,67 +1,6 @@
 *{
     margin: 0;
     padding: 0;
-}
-   
-body{
-    background: #ffffff;
-}
-   
-.landingbox{
-    padding: 30px;
-    width: 400px;
-    height: 600px;
-    background: #63e09c;
-    top: 50%;
-    left: 50%;
-    position: absolute;
-    transform: translate(-50%, -50%);
-    box-sizing: border-box;
-    text-align: justify;
-    color: #bdbddb;;
-}
-   
-.h1{
-    font-size: 130px;
-   }
-   
-.h2{
-    font-size: 90px;
-}
- 
-.btn{
-    vertical-align: center;
-    text-align: center;
-    transform: translate(21%, -10%);
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-.btn a{
-    width: 150px ;
-    display: block;
-    margin: 10px;
-    padding: 12px;
-    color: black;
-    border: .5px solid black;
-    position: relative;
-    text-decoration: none;
-}
-
-.btn a span{
-    width: 0%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background: #fff;
-    z-index: -1;
-    transition: 0.5s;
-}
-   
-.btn a:hover span{
-    width: 100%;
-}
-   
-.btn a:hover{
-    color: #8080ff;
-}
-   
