--- a/style/style.css
+++ b/style/style.css
@@ -7,6 +7,7 @@ body{
   }
   .box{
     width: 300px;
+    height: 420px;
     padding: 40px;
     position: absolute;
     top: 50%;
@@ -62,7 +63,7 @@ body{
   .back{
     border:0;
     background: none;
-    /* display: block; */
+    display: block;
     margin: 20px auto;
     text-align: center;
     border: 2px solid red;
@@ -72,6 +73,8 @@ body{
     border-radius: 24px;
     transition: 0.25s;
     cursor: pointer;
+    position: absolute;
+    transform: translate(-50%, -50%);
   }
   .back:hover{
     background: red;
