--- a/style/style.css
+++ b/style/style.css
@@ -7,7 +7,6 @@ body{
   }
   .box{
     width: 300px;
-    height: 420px;
     padding: 40px;
     position: absolute;
     top: 50%;
@@ -63,7 +62,7 @@ body{
   .back{
     border:0;
     background: none;
-    display: block;
+    /* display: block; */
     margin: 20px auto;
     text-align: center;
     border: 2px solid red;
@@ -73,8 +72,6 @@ body{
     border-radius: 24px;
     transition: 0.25s;
     cursor: pointer;
-    position: absolute;
-    transform: translate(-50%, -50%);
   }
   .back:hover{
     background: red;
