--- a/style/style.css
+++ b/style/style.css
@@ -44,7 +44,6 @@ body{
   .box input[type = "submit"]{
     border:0;
     background: none;
-    /* display: block; */
     margin: 20px auto;
     text-align: center;
     border: 2px solid #2ecc71;
@@ -59,10 +58,9 @@ body{
     background: #2ecc71;
   }
 
-  .back{
+  .box button{
     border:0;
     background: none;
-    /* display: block; */
     margin: 20px auto;
     text-align: center;
     border: 2px solid red;
@@ -73,6 +71,6 @@ body{
     transition: 0.25s;
     cursor: pointer;
   }
-  .back:hover{
+  .box button:hover{
     background: red;
   }
