--- a/style/style.css
+++ b/style/style.css
@@ -60,8 +60,9 @@ body{
 
   .box button{
     border:0;
+    display: block;
     background: none;
-    margin: 20px auto;
+    margin: 5px auto;
     text-align: center;
     border: 2px solid red;
     padding: 14px 40px;
