--- a/style/lp.css
+++ b/style/lp.css
@@ -21,6 +21,7 @@ body{
     text-align: justify;
     color: #ffffff;
     box-shadow: 0 0 20px rgba(168, 122, 122, 0.5);
+    border-radius: 10px;
 }
 
 .box img{
