--- a/style/style.css
+++ b/style/style.css
@@ -44,10 +44,10 @@ body{
   .box input[type = "submit"]{
     border:0;
     background: none;
-    margin: 20px auto;
+    margin: 40px auto;
     text-align: center;
     border: 2px solid #2ecc71;
-    padding: 14px 40px;
+    padding: 14px 15px;
     outline: none;
     color: white;
     border-radius: 24px;
@@ -60,12 +60,12 @@ body{
 
   .box button{
     border:0;
-    display: block;
+    /* display: block; */
     background: none;
     margin: 5px auto;
     text-align: center;
     border: 2px solid red;
-    padding: 14px 40px;
+    padding: 14px 15px;
     outline: none;
     color: white;
     border-radius: 24px;
