--- a/style/admin.css
+++ b/style/admin.css
@@ -1,11 +1,20 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
+body{
+    background: rosybrown;
+}
 #sideNav{
     width: 250px;
     height: 100vh;
     position: fixed;
-    left: 0;
-    top: 0;
-    background: #009688;
+    right: -250px;
+    top:0;
+    background: #eddebd;
     z-index: 2;
+    transition: 0.5s;
 }
 
 nav ul li{
@@ -15,14 +24,16 @@ nav ul li{
 
 nav ul li a{
     text-decoration: none;
-    color: #ffff;
+    color: #fff;
 }
+
 #menuBtn{
-    width: 50px;
+    width:  50px;
     height: 50px;
-    background: white;
+    background: #eddebd;
+    text-align: center;
     position: fixed;
-    left: 20px;
+    right: 30px;
     top: 20px;
     border-radius: 3px;
     z-index: 3;
@@ -32,4 +43,15 @@ nav ul li a{
 #menuBtn img{
     width: 20px;
     margin-top: 15px;
+    
+}
+
+@media screen and (max-width: 770px){
+    .banner-text h1{
+    font-size: 44px;
+    }
+    .banner-btn a{
+        display: block;
+        margin: 20px auto;
+    }
 }
