--- a/style/admin.css
+++ b/style/admin.css
@@ -4,7 +4,8 @@
 }
 
 body{
-    background: rosybrown;
+    background: white;
+    font-family: "Century Gothic", sans-serif;
 }
 #sideNav{
     width: 250px;
@@ -12,7 +13,7 @@ body{
     position: fixed;
     right: -250px;
     top:0;
-    background: #eddebd;
+    background: black;
     z-index: 2;
     transition: 0.5s;
 }
@@ -24,13 +25,13 @@ nav ul li{
 
 nav ul li a{
     text-decoration: none;
-    color: #fff;
+    color: white;
 }
 
 #menuBtn{
     width:  50px;
     height: 50px;
-    background: #eddebd;
+    background: black;
     text-align: center;
     position: fixed;
     right: 30px;
@@ -55,3 +56,15 @@ nav ul li a{
         margin: 20px auto;
     }
 }
+
+table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+    margin: auto;
+    text-align: center;
+    
+  }
+
+  .table{
+      padding: 50px;
+  }
