--- a/style/costumer.css
+++ b/style/costumer.css
@@ -13,7 +13,7 @@ table, tr, td, th{
     border-collapse: collapse;
     border-radius: 10px;
     padding: 10px;
-    margin: 5px;
+    margin: auto;
     text-align: center;
 }
 
