--- a/style/costumer.css
+++ b/style/costumer.css
@@ -17,11 +17,20 @@ table, tr, td, th{
     text-align: center;
 }
 
-input{
+input[type=number]{
    border: none;
    outline: none;
    padding: 5px;
    border-radius: 5px;
    width: 40px;
-
+}
+input[type=submit] {
+    text-align: center;
+    background-color: rgb(21, 204, 46);
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-decoration: none;
+    margin: 4px 2px;
+    cursor: pointer;
 }
