--- a/style/costumer.css
+++ b/style/costumer.css
@@ -28,6 +28,7 @@ input[type=submit] {
     text-align: center;
     background-color: rgb(21, 204, 46);
     border: none;
+    border-radius: 80%;
     color: white;
     padding: 16px 32px;
     text-decoration: none;
