--- a/style/admin.css
+++ b/style/admin.css
@@ -8,9 +8,10 @@ body{
     background: #a6f2ff;
 }
 
-.login-box{
+.login-box, .meals{
     width: 320px;
     height: 420px;
+    box-shadow: 0 0 30px rgba(40, 113, 196, 0.589);
     background: transparent;
     color: #000;
     top: 50%;
@@ -37,12 +38,13 @@ h1{
     
 }
 
-.login-box input{
+.login-box input, .meals input{
     width: 100%;
     margin-bottom: 15px;
 }
 
-.login-box input[type="text"], input[type="password"]
+.login-box input[type="text"], input[type="password"],
+.meals input[type="text"], input[type="number"]
 {
     border: none;
     border-bottom: 1px solid  #fff5ff;
@@ -53,7 +55,7 @@ h1{
     font-family: Serif ;
 }
 
-.login-box input[type="submit"]
+.login-box input[type="submit"], .meals input[type="submit"]
 {
     border: none;
     outline: none;
@@ -65,7 +67,7 @@ h1{
     border-radius: 12px;
 }
 
-.login-box input[type="submit"]:hover
+.login-box input[type="submit"]:hover, .meals input[type="submit"]:hover
 {
     cursor: pointer;
     background: #6666ff;
@@ -85,7 +87,7 @@ h1{
 
 @media screen and (max-width: 770px)
 {
-    .login-box{
+    .login-box, .meals{
        /* width: 320px;
         height: 420px;*/
         top: 50%;
