--- a/style/admin.css
+++ b/style/admin.css
@@ -8,7 +8,7 @@ body{
     background: #a6f2ff;
 }
 
-.login-box, .meals{
+.login-box, .meals, .pasta, .drinks{
     width: 320px;
     height: 420px;
     box-shadow: 0 0 30px rgba(40, 113, 196, 0.589);
@@ -38,13 +38,17 @@ h1{
     
 }
 
-.login-box input, .meals input{
+.login-box input, .meals input,
+.pasta input, .drinks input
+{
     width: 100%;
     margin-bottom: 15px;
 }
 
 .login-box input[type="text"], input[type="password"],
-.meals input[type="text"], input[type="number"]
+.meals input[type="text"], input[type="number"],
+.pasta input[type="text"], input[type="number"],
+.drinks input[type="text"], input[type="number"]
 {
     border: none;
     border-bottom: 1px solid  #fff5ff;
@@ -55,7 +59,8 @@ h1{
     font-family: Serif ;
 }
 
-.login-box input[type="submit"], .meals input[type="submit"]
+.login-box input[type="submit"], .meals input[type="submit"],
+.pasta input[type="submit"], .drinks input[type="submit"]
 {
     border: none;
     outline: none;
@@ -67,7 +72,8 @@ h1{
     border-radius: 12px;
 }
 
-.login-box input[type="submit"]:hover, .meals input[type="submit"]:hover
+.login-box input[type="submit"]:hover, .meals input[type="submit"]:hover,
+.pasta input[type="submit"]:hover, .drinks input[type="submit"]:hover
 {
     cursor: pointer;
     background: #6666ff;
@@ -87,7 +93,7 @@ h1{
 
 @media screen and (max-width: 770px)
 {
-    .login-box, .meals{
+    .login-box, .meals, .pasta, .drinks{
        /* width: 320px;
         height: 420px;*/
         top: 50%;
