--- a/style/lp.css
+++ b/style/lp.css
@@ -5,7 +5,7 @@
 }
 
 #banner{
-    background-image: linear-gradient(rgba(0,0,1,0.3), #c1fff1);
+    background-image: linear-gradient(rgba(0,0,1,0.3), #85cdf7);
     background-size: cover;
     background-position: center;
     height: 100vh;
