--- a/style/lp.css
+++ b/style/lp.css
@@ -4,15 +4,8 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-#exer{
-    background-image: url(omg.gif);
-    background-size: cover;
-    background-position: center;
-    height: 100vh;
-}
-
 #banner{
-    background-image: linear-gradient(rgba(0,0,1,0.3), #85cdf7);
+    background-image: linear-gradient(rgba(87, 39, 143, 0.623), #85cdf7);
     background-size: cover;
     background-position: center;
     height: 100vh;
@@ -22,7 +15,7 @@
     padding: 30px;
     width: 320px;
     height: 420px;
-    background: #85cdf7;
+    background-image: linear-gradient(rgba(96, 224, 247, 0.623), #8241b8);
     top: 50%;
     left: 50%;
     position: absolute;
@@ -30,7 +23,7 @@
     box-sizing: border-box;
     text-align: justify;
     color: #ffffff;
-    box-shadow: 0 0 20px rgba(168, 122, 122, 0.5);
+    box-shadow: 0 0 20px rgba(147, 122, 168, 0.5);
     border-radius: 10px;
 }
 
