--- a/style/costumer.css
+++ b/style/costumer.css
@@ -47,7 +47,7 @@
 }
 a{
     text-align: center;
-    background-color: rgb(21, 146, 204);
+    background-color: #1B262C;
     border: none;
     border-radius: 3px;
     color: white;
