--- a/style/admin.css
+++ b/style/admin.css
@@ -204,7 +204,7 @@ nav ul h2 a{
 }
 .a{
     text-align: center;
-    background-color: rgb(21, 146, 204);
+    background-color: #1B262C;
     border: none;
     border-radius: 3px;
     color: white;
