--- a/style/style.css
+++ b/style/style.css
@@ -12,7 +12,7 @@ body{
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
-    background: #2b7db4;
+    background: #1a2b36;
     text-align: center;
     border-radius: 5px;
     box-shadow: 0 0 30px rgba(29, 112, 207, 0.5);
